--- a/index.html
+++ b/index.html
@@ -4,57 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Expanding Cards Gallery</title>
+    <title>How to help students in online exams?</title>
   </head>
   <body>
     <header>  
-      <h2> Places</h2> 
+      <h2> How to help students in online exams?</h2> 
     </header>
     <main> 
     <div class="container">
       <div
         class="panel active"
         style="
-          background-image: url('https://images.unsplash.com/photo-1556648011-e01aca870a81?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Zm9yZXN0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
+          background-image: url('https://images.unsplash.com/photo-1619950835688-1bddaffce4a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Forest</h3>
+        <h3>Anxiety</h3>
       </div>
 
       <div
         class="panel"
         style="
-          background-image: url('https://images.unsplash.com/photo-1600273970168-c3db62dcf905?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGJlYWNoZXN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
+          background-image: url('https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Tropical Beach</h3>
+      <h3><a href="https://app.hourone.ai/player/2e14cb1454bb4048a834ebc128f35618" style="text-decoration:none" target="_blank">Messages</a></h3>
       </div>
 
       <div
         class="panel"
         style="
-          background-image: url('https://images.unsplash.com/photo-1609699206790-5c03f9a922e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fGJlYWNoZXN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
+          background-image: url('https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Sunset</h3>
+        <h3>Preparation for exams</h3>
       </div>
 
       <div
         class="panel"
         style="
-          background-image: url('https://images.unsplash.com/photo-1614606169586-9ea090ee8a2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8bmV2ZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
+          background-image: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Winter</h3>
+        <h3>Equipaments</h3>
       </div>
 
       <div
         class="panel"
         style="
-          background-image: url('https://images.unsplash.com/photo-1598568536940-ce8d1bc05b1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGFudGFuYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
+          background-image: url('https://images.unsplash.com/photo-1573495627094-cbfef909a47b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80');
         "
       >
-        <h3>Pantanal</h3>
+        <h3>Support</h3>
       </div>
     </div>
     <script src="script.js"></script>
