--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>  
-      <h2> How to help students in online exams?</h2> 
+      <h2> How to take written online exams?</h2> 
     </header>
     <main> 
     <div class="container">
@@ -18,7 +18,7 @@
           background-image: url('https://images.unsplash.com/photo-1619950835688-1bddaffce4a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://blog.advancementcourses.com/articles/managing-test-anxiety/" style="text-decoration:none" target="_blank">Anxiety</a></h3>
+        <h3><a href="https://blog.advancementcourses.com/articles/managing-test-anxiety/" style="text-decoration:none" target="_blank">How to deal with anxiety and stress?</a></h3>
       </div>
 
       <div
@@ -27,7 +27,7 @@
           background-image: url('https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-      <h3><a href="https://app.hourone.ai/player/2e14cb1454bb4048a834ebc128f35618" style="text-decoration:none" target="_blank">Messages</a></h3>
+      <h3><a href="https://app.hourone.ai/player/2e14cb1454bb4048a834ebc128f35618" style="text-decoration:none" target="_blank">Preparation for the exams.</a></h3>
       </div>
 
       <div
@@ -36,7 +36,7 @@
           background-image: url('https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Preparation for exams</h3>
+        <h3>How to use tools in the day of the exams?</h3>
       </div>
 
       <div
@@ -45,7 +45,7 @@
           background-image: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Equipaments</h3>
+        <h3>Equipments needed to take the exam.</h3>
       </div>
 
       <div
@@ -54,7 +54,7 @@
           background-image: url('https://images.unsplash.com/photo-1573495627094-cbfef909a47b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80');
         "
       >
-        <h3>Support</h3>
+        <h3>Emergency help during the exam.</h3>
       </div>
     </div>
     <script src="script.js"></script>
