--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div
         class="panel"
         style="
-          background-image: url('https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+          background-image: url('https://cdn.pixabay.com/photo/2015/12/16/11/28/technology-1095751_960_720.jpg');
         "
       >
       <h3><a href="https://app.hourone.ai/player/2e14cb1454bb4048a834ebc128f35618" style="text-decoration:none" target="_blank">Preparation for the exams.</a></h3>
