--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           background-image: url('https://images.unsplash.com/photo-1619950835688-1bddaffce4a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://blog.advancementcourses.com/articles/managing-test-anxiety/" style="text-decoration:none" target="_blank">Tips of how to deal with anxiety and stress.</a></h3>
+        <h3><a href="https://blog.advancementcourses.com/articles/managing-test-anxiety/" style="text-decoration:none" target="_blank" alt="Click on the image">Tips of how to deal with anxiety and stress.</a></h3>
       </div>
 
       <div
