--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           background-image: url('https://cdn.pixabay.com/photo/2015/12/16/11/28/technology-1095751_960_720.jpg');
         "
       >
-      <h3><a href="https://app.hourone.ai/player/2e14cb1454bb4048a834ebc128f35618" style="text-decoration:none" target="_blank" title="Click on here">Preparation for the exams.</a></h3>
+      <h3><a href="https://canvas.instructure.com/courses/5822509/pages/preparation?module_item_id=77318357" style="text-decoration:none" target="_blank" title="Click on here">Preparation for the exams.</a></h3>
       </div>
 
       <div
