--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           background-image: url('https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://canvas.instructure.com/courses/5822509/pages/preparation?module_item_id=77318357" style="text-decoration:none" target="_blank" title="Click on here"></a>How to use tools in the day of the exams?</h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/tools" style="text-decoration:none" target="_blank" title="Click on here"></a>How to use tools in the day of the exams?</h3>
       </div>
 
       <div
@@ -45,7 +45,7 @@
           background-image: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3>Equipments needed to take the exam.</h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/tools" style="text-decoration:none" target="_blank" title="Click on here"></a>Equipments needed to take the exam.</h3>
       </div>
 
       <div
