--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           background-image: url('https://images.unsplash.com/photo-1573495627094-cbfef909a47b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80');
         "
       >
-        <h3>Emergency help during the exam.</h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/support" style="text-decoration:none" target="_blank" title="Click on here">Emergency help during the exam.</a></h3>
       </div>
     </div>
     <script src="script.js"></script>
