--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>  
       <h2> How to take written online exams?</h2> <br>
-      <h4>This module will help you to know more about the online exam which you would be taking in this course. It would be a one place solution to all your questions, curiosity and anxiety for giving the exam.
-</h4>
+      <div><h4>This module will help you to know more about the online exam which you would be taking in this course. It would be a one place solution to all your questions, curiosity and anxiety for giving the exam.
+</h4></div>
     </header>
     <main> 
     <div class="container">
