--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="balao">
         <b>3.</b> It would introduce you to some tools and symbols which you can use in the exams to enhance the quality of your answers.( Like 
-          drawing tools, making flowcharts using MIRO and using special formulas)
+          drawing tools, making flowcharts using MIRO and using special formulas).
 
       </div>
        
@@ -34,7 +34,7 @@
           background-image: url('https://images.unsplash.com/photo-1619950835688-1bddaffce4a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://www.ucanwest.ca/blog/education-careers-tips/8-tips-to-deal-with-exam-stress-and-anxiety/" style="text-decoration:none" target="_blank" title="Click on here">Tips of how to deal with anxiety and stress.</a></h3>
+        <h3><a href="https://www.ucanwest.ca/blog/education-careers-tips/8-tips-to-deal-with-exam-stress-and-anxiety/" style="text-decoration:none" target="_blank" title="Click on here">1. Tips of how to deal with anxiety and stress.</a></h3>
       </div>
 
       <div
@@ -43,7 +43,7 @@
           background-image: url('https://cdn.pixabay.com/photo/2015/12/16/11/28/technology-1095751_960_720.jpg');
         "
       >
-      <h3><a href="https://canvas.instructure.com/courses/5903756/pages/preparation" style="text-decoration:none" target="_blank" title="Click on here">Preparation for the exams.</a></h3>
+      <h3><a href="https://canvas.instructure.com/courses/5903756/pages/preparation" style="text-decoration:none" target="_blank" title="Click on here">2. Preparation for the exams.</a></h3>
       </div>
 
       <div
@@ -52,7 +52,7 @@
           background-image: url('https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/tools" style="text-decoration:none" target="_blank" title="Click on here">How to use tools in the day of the exams?</a></h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/tools" style="text-decoration:none" target="_blank" title="Click on here">3. How to use tools in the day of the exams?</a></h3>
       </div>
 
       <div
@@ -61,7 +61,7 @@
           background-image: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
         "
       >
-        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/equipments" style="text-decoration:none" target="_blank" title="Click on here">Equipments needed to take the exam.</a></h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/equipments" style="text-decoration:none" target="_blank" title="Click on here">5. Equipments needed to take the exam.</a></h3>
       </div>
 
       <div
@@ -70,7 +70,7 @@
           background-image: url('https://images.unsplash.com/photo-1573495627094-cbfef909a47b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80');
         "
       >
-        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/support" style="text-decoration:none" target="_blank" title="Click on here">Emergency help during the exam.</a></h3>
+        <h3><a href="https://canvas.instructure.com/courses/5903756/pages/support" style="text-decoration:none" target="_blank" title="Click on here">5. Emergency help during the exam.</a></h3>
       </div>
     </div>
     <script src="script.js"></script>
