--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h2> How to take written online exams?</h2> 
       <p font-size="20px;">This module will help you to know more about the online exam which you would be taking in this course. <br>  It would be a one place solution to all your questions, curiosity and anxiety for giving the exam.
       </p>
-      <div id="passar_mouse">Mouse over me to get more information about it.
+      <div id="passar_mouse">Mouse over me to find out more information about each image.
       <div id="mostrar">
       <div class="balao final"><b>1.</b> It has some basic tips on how to low down our stress and anxiety.  <br><br>
         <b>2.</b> It will tell you about the process and preparation which you need to do before an exam like downloading a special browser,    
