--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <h2> How to take written online exams?</h2> 
       <p font-size="14px;">This module will help you to know more about the online exam which you would be taking in this course. <br>  It would be a one place solution to all your questions, curiosity and anxiety for giving the exam.
       </p>
-      <div id="passar_mouse">Mouse over me to find out more information about each image.
+      <div id="passar_mouse">Mouse over me to find out more useful information about the exam.
       <div id="mostrar">
-      <div class="balao final"><b>1.</b> It has some basic tips on how to low down our stress and anxiety.  <br><br>
-        <b>2.</b> It will tell you about the process and preparation which you need to do before an exam like downloading a special browser,    
+      <div class="balao final"><b>1. Tips.</b> It has some basic on how to low down our stress and anxiety.  <br><br>
+        <b>2. Preparation. </b> It will tell you about the process and preparation which you need to do before an exam like downloading a special browser,    
           registering in Ladok before the exam and checking the requirements of the computer. All is explained using a video tutorial. <br><br>
-        <b>3.</b> It would introduce you to some tools and symbols which you can use in the exams to enhance the quality of your answers.(Like 
+        <b>3. Tools. </b> It would introduce you to some tools and symbols which you can use in the exams to enhance the quality of your answers.(Like 
           drawing tools, making flowcharts using MIRO, and using special formulas). <br><br>     
-        <b>4.</b> Equipment and instructions for the exam. <br><br>      
-        <b>5.</b>  Emergency help during the exam(power failure, technological glitch, etc). We have given the contact details and email id to whom to contact if something happens.<br><br>      
+        <b>4. Equipment </b> and instructions for the exam. <br><br>      
+        <b>5. Emergency help during the exam </b> (power failure, technological glitch, etc). We have given the contact details and email id to whom to contact if something happens.<br><br>      
         <b>6.</b>  And finally you can try all this tools in the <a href="https://canvas.instructure.com/courses/5903756/quizzes/12974839?module_item_id=77573505">real-time based mock exam</a> which will be having unlimited attempts. 
       </div>
       </div>
