--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           drawing tools, making flowcharts using MIRO, and using special formulas). <br><br>     
         <b>4. Equipment </b> and instructions for the exam. <br><br>      
         <b>5. Emergency help during the exam </b> (power failure, technological glitch, etc). We have given the contact details and email id to whom to contact if something happens.<br><br>      
-        <b>6.</b>  And finally you can try all this tools in the <a href="https://canvas.instructure.com/courses/5903756/quizzes/12974839?module_item_id=77573505">real-time based mock exam</a> which will be having unlimited attempts. 
+        <b>6.</b>  And finally you can try all this tools in the <b><a href="https://canvas.instructure.com/courses/5903756/quizzes/12974839?module_item_id=77573505" style="text-decoration:none" target="_blank">real-time based mock exam</a></b> which will be having unlimited attempts. 
       </div>
       </div>
       </div>
